--- a/layouts/partials/article-link/_shortcode.html
+++ b/layouts/partials/article-link/_shortcode.html
@@ -1,11 +1,39 @@
 {{/* Used by
-  1. list.html and term.html (when the cardView option is enabled)
-  2. Recent articles template (when the cardView option is enabled)
-  3. Shortcode list.html
+  1. article shortcode
+
+  The four variants of article-link are very similar. Despite appearances, as of df859f:
+  - _shortcode.html uses $page := $target, while the others use $page := .Page
+  - card-related.html does not have the hideFeatureImage option, while the others do
+
+  $page is added intentionally to prevent small differences inside
+  
+  MODIFIED: Disabled image processing to avoid duplicate generation
 */}}
+{{ $target := .target }}
+{{ $shortcodeShowSummary := .showSummary }}
+{{ $shortcodeCompactSummary := .compactSummary }}
+{{ $constrainItemsWidth := site.Params.list.constrainItemsWidth | default false }}
 {{ $disableImageOptimization := site.Store.Get "disableImageOptimization" }}
 
-{{ $page := .Page }}
+{{ $cardClasses := "flex flex-col md:flex-row relative" }}
+{{ $imgWrapperClasses := "" }}
+{{ $cardContentClasses := "" }}
+
+{{ if site.Params.list.showCards }}
+  {{ $cardClasses = printf "%s overflow-hidden rounded-lg border border-neutral-300 dark:border-neutral-600" $cardClasses }}
+  {{ $imgWrapperClasses = "" }}
+  {{ $cardContentClasses = printf "%s p-4 pt-2" $cardContentClasses }}
+{{ else }}
+  {{ $cardClasses = printf "%s" $cardClasses }}
+  {{ $imgWrapperClasses = printf "%s thumbnail-shadow md:mr-7" $imgWrapperClasses }}
+  {{ $cardContentClasses = printf "%s mt-3 md:mt-0" $cardContentClasses }}
+{{ end }}
+
+{{ if $constrainItemsWidth }}
+  {{ $cardClasses = printf "%s max-w-prose" $cardClasses }}
+{{ end }}
+
+{{ $page := $target }}
 {{ $featured := "" }}
 {{ $featuredURL := "" }}
 {{ $featuredURLSmall := "" }}
@@ -14,7 +42,7 @@
 {{ $featuredURLWebpLarge := "" }}
 {{ $widthSmall := 0 }}
 {{ $widthLarge := 0 }}
-{{ if not .Params.hideFeatureImage }}
+{{ if not $target.Params.hideFeatureImage }}
   {{/* frontmatter */}}
   {{ with $page }}
     {{ with .Params.featureimage }}
@@ -84,10 +112,9 @@
 {{ end }}
 
 
-<article
-  class="relative min-h-full min-w-full overflow-hidden rounded-lg border border-neutral-300 dark:border-neutral-600">
+<article class="{{ $cardClasses }}">
   {{ if or $featuredURL $featuredURLSmall }}
-    <div class="flex-none relative overflow-hidden thumbnail_card">
+    <div class="flex-none relative overflow-hidden {{ $imgWrapperClasses }} thumbnail">
       {{ if $featuredURL }}
         {{/* Hotlinked image */}}
         <img
@@ -131,13 +158,8 @@
       {{ end }}
     </div>
   {{ end }}
-  {{ if and .Draft .Site.Params.article.showDraftLabel }}
-    <span class="absolute top-0 right-0 m-2">
-      {{ partial "badge.html" (i18n "article.draft" | emojify) }}
-    </span>
-  {{ end }}
-  <div class="p-4">
-    <header>
+  <div class="{{ $cardContentClasses }}">
+    <header class="items-center text-start text-xl font-semibold">
       <a
         {{ with $page.Params.externalUrl }}
           href="{{ . }}" target="_blank" rel="external"
@@ -146,8 +168,8 @@
         {{ end }}
         class="not-prose before:absolute before:inset-0 decoration-primary-500 dark:text-neutral text-xl font-bold text-neutral-800 hover:underline hover:underline-offset-2">
         <h2>
-          {{ .Title | emojify }}
-          {{ if .Params.externalUrl }}
+          {{ $target.Title | emojify }}
+          {{ if $target.Params.externalUrl }}
             <span class="cursor-default align-top text-xs text-neutral-400 dark:text-neutral-500">
               <span class="rtl:hidden">&#8599;</span>
               <span class="ltr:hidden">&#8598;</span>
@@ -155,13 +177,36 @@
           {{ end }}
         </h2>
       </a>
+      {{ if and $target.Draft site.Params.article.showDraftLabel }}
+        <div class="ms-2">
+          {{ partial "badge.html" (i18n "article.draft" | emojify) }}
+        </div>
+      {{ end }}
+      {{ if templates.Exists "partials/extend-article-link.html" }}
+        {{ partial "extend-article-link.html" $target }}
+      {{ end }}
     </header>
     <div class="text-sm text-neutral-500 dark:text-neutral-400">
-      {{ partial "article-meta/basic.html" . }}
+      {{ partial "article-meta/basic.html" $target }}
     </div>
-    {{ if .Params.showSummary | default (.Site.Params.list.showSummary | default false) }}
-      <div class="prose dark:prose-invert py-1">{{ .Summary | plainify }}</div>
+    {{ $showSummary := false }}
+    {{ if ne $shortcodeShowSummary nil }}
+      {{ $showSummary = $shortcodeShowSummary }}
+    {{ else }}
+      {{ $showSummary = $target.Params.showSummary | default (site.Params.list.showSummary | default false) }}
+    {{ end }}
+    {{ if $showSummary }}
+      {{ $compactSummary := false }}
+      {{ if ne $shortcodeCompactSummary nil }}
+        {{ $compactSummary = $shortcodeCompactSummary }}
+      {{ else }}
+        {{ $compactSummary = $target.Params.compactSummary | default (site.Params.list.compactSummary | default false) }}
+      {{ end }}
+      <div class="overflow-hidden pt-1">
+        <div class="{{ if $compactSummary }}line-clamp-3{{ end }} prose dark:prose-invert max-w-fit">
+          {{ $target.Summary | plainify }}
+        </div>
+      </div>
     {{ end }}
   </div>
-  <div class="px-6 pt-4 pb-2"></div>
 </article>
